i aint getting nowhere

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,8 +31,9 @@ const pagename = cleaned[1]
 		
 		<script src="/bootstrap.min.js" is:inline></script>
 		
-		<script id="MathJax-script" src="/mathjax/tex-chtml.js" is:inline></script>
-		
+				
+		<script id="MathJax-script" src="/mathjax/tex-svg.js" is:inline></script>
+
 
 		
 		<script src="/jquery-2.1.4.min.js" is:inline></script>
@@ -40,6 +41,8 @@ const pagename = cleaned[1]
 		<script src="/sylvester.js" is:inline></script>
 		<script src="/PrairieGeom.js" is:inline></script>
 		<script src="/PrairieDraw.js" is:inline></script>
+	
+
 		
 		
 		<script src="/static/js/simplified_view.js" is:inline></script>
