--- a/src/layouts/BlankLayout.astro
+++ b/src/layouts/BlankLayout.astro
@@ -29,7 +29,7 @@ const pagename = cleaned[1]
 		
 		<script src="/bootstrap.min.js" is:inline></script>
 		
-		<script id="MathJax-script" src="/mathjax/tex-chtml.js" is:inline></script>
+		<script id="MathJax-script" src="/mathjax/tex-svg.js" is:inline></script>
 		
 
 		
