--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -80,7 +80,6 @@ div.grid{
     display: block;
     object-fit: contain;
     width: 100%;
-    padding: .5rem; 
     border-radius: .5rem;
 }
 
@@ -158,7 +157,7 @@ div.grid{
             <div class="grid card-grid-fancy">
                 <div class="main-cards">
                     <a href="/thermodynamics">
-                        <div style="background-color: #fff;"></div>
+                        <img src="/home_page/thermodynamics.png" alt="Thermodynamics logo" />
                         <p>Thermodynamics</p>
                     </a>
                 </div>
