exmaple subsections + oragne rectangles

--- a/src/pages/about/docs.astro
+++ b/src/pages/about/docs.astro
@@ -304,7 +304,7 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
 
 <hr>
 
-<SubSection title="Section" id="example-section">
+<SubSection title="Example Section" id="example-section">
     <p>TEXT</p>
 </SubSection>
 
@@ -335,7 +335,7 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
 
 <hr>
 
-<SubSubSection title="SubSection" id="example-sub-section">
+<SubSubSection title="Example SubSection" id="example-sub-section">
     <p>TEXT</p>
 </SubSubSection>
 
@@ -366,7 +366,7 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
 
 <hr>
 
-<SubSubSubSection title="SubSubSection" id="example-sub-sub-section">
+<SubSubSubSection title="Example SubSubSection" id="example-sub-sub-section">
     <p>TEXT</p>
 </SubSubSubSection>
 
