--- a/src/pages/about/docs.astro
+++ b/src/pages/about/docs.astro
@@ -273,7 +273,7 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
 
 <hr>
 
-<Section title="Title" id="example-page">
+<Section title="Example Page Title" id="example-page">
 <p>TEXT</p>
 </Section>
 
@@ -835,6 +835,8 @@ Remember, these pages are supposed to be reference material, not a textbook. Kee
 </SubSubSection> 
 
 <SubSubSection title="External Video" id="ext-video">
+
+    <p> For safety purposes, please only embed YouTube videos. <p>
 
     <p>Tag type: Regular</p>
     
