--- a/src/pages/about/documentation/prairiedraw.astro
+++ b/src/pages/about/documentation/prairiedraw.astro
@@ -256,21 +256,21 @@ import Image from "../../../components/Image.astro";
             var xp0 = $V([1, 0]);
             var xpp = $V([1, 1]);
             this.point(xnn);
-            this.text(xnn, xpp, "(-1,-1)");
+            this.text(xnn, xpp, "TEX:(-1,-1)");
             this.point(xn0);
-            this.text(xn0, xp0, "(-1, 0)");
+            this.text(xn0, xp0, "TEX:(-1, 0)");
             this.point(xnp);
-            this.text(xnp, xpn, "(-1, 1)");
+            this.text(xnp, xpn, "TEX:(-1, 1)");
             this.point(x0n);
-            this.text(x0n, x0p, "( 0,-1)");
+            this.text(x0n, x0p, "TEX:( 0,-1)");
             this.point(x0p);
-            this.text(x0p, x0n, "( 0, 1)");
+            this.text(x0p, x0n, "TEX:( 0, 1)");
             this.point(xpn);
-            this.text(xpn, xnp, "( 1,-1)");
+            this.text(xpn, xnp, "TEX:( 1,-1)");
             this.point(xp0);
-            this.text(xp0, xn0, "( 1, 0)");
+            this.text(xp0, xn0, "TEX:( 1, 0)");
             this.point(xpp);
-            this.text(xpp, xnn, "( 1, 1)");
+            this.text(xpp, xnn, "TEX:( 1, 1)");
           });
           /* ]]> */
         </script>
@@ -287,14 +287,21 @@ import Image from "../../../components/Image.astro";
     var xpn = $V([ 1, -1]);
     var xp0 = $V([ 1,  0]);
     var xpp = $V([ 1,  1]);
-    this.point(xnn); this.text(xnn, xpp, "(-1,-1)");
-    this.point(xn0); this.text(xn0, xp0, "(-1, 0)");
-    this.point(xnp); this.text(xnp, xpn, "(-1, 1)");
-    this.point(x0n); this.text(x0n, x0p, "( 0,-1)");
-    this.point(x0p); this.text(x0p, x0n, "( 0, 1)");
-    this.point(xpn); this.text(xpn, xnp, "( 1,-1)");
-    this.point(xp0); this.text(xp0, xn0, "( 1, 0)");
-    this.point(xpp); this.text(xpp, xnn, "( 1, 1)");
+    this.text(xnn, xpp, "TEX:(-1,-1)");
+      this.point(xn0);
+      this.text(xn0, xp0, "TEX:(-1, 0)");
+      this.point(xnp);
+      this.text(xnp, xpn, "TEX:(-1, 1)");
+      this.point(x0n);
+      this.text(x0n, x0p, "TEX:( 0,-1)");
+      this.point(x0p);
+      this.text(x0p, x0n, "TEX:( 0, 1)");
+      this.point(xpn);
+      this.text(xpn, xnp, "TEX:( 1,-1)");
+      this.point(xp0);
+      this.text(xp0, xn0, "TEX:( 1, 0)");
+      this.point(xpp);
+      this.text(xpp, xnn, "TEX:( 1, 1)");
     });
     /* ]]> */
     ` />
