--- a/src/pages/about/documentation/prairiedraw.astro
+++ b/src/pages/about/documentation/prairiedraw.astro
@@ -209,9 +209,11 @@ import Image from "../../../components/Image.astro";
       </SubSubSection>
       <SubSubSection title="Text" id="text">
         <p>
-          Text can be drawn using <code>this.text(position, anchor, textString)</code>, which provides the position in 2D to draw the text, and the anchor point relative to the text. If
-          <code>textString</code> starts with <code>TEX:</code> then the rest of the string is interpreted as LaTeX. To support this, the
-          <code>generate_text.py</code> script must be run on the JavaScript file to generate the required images.
+          Text can be drawn using <code>this.text(position, anchor, textString, boxed, angle, height, width)</code>, which provides the position in 2D to draw the text, and the anchor point relative to the text. If<code>textString</code> starts with <code>TEX:</code> then the rest of the string is interpreted as LaTeX. <code>boxed</code> is a boolean refering to whether a box should be drawn around it, <code>angle</code> is the angle of rotation of the text in radians, and <code>height</code> and <code>width</code> represent the dimensions of the text. 
+        </p>
+        <p>
+          <u>Note:</u> Only the most restrictive dimension of the two will be applied. In the example below, even though
+          <code>width</code> is set at 500, <code>height</code> being 30 means the text is 30 pixels tall, and the width is adjusted accordingly.
         </p>
 
         <PrairieDrawCanvas id="text_pdc" width="300" height="300" />
@@ -222,8 +224,10 @@ import Image from "../../../components/Image.astro";
             var O = $V([0, 0]);
             var P = $V([2, 2]);
             this.arrow(O, P);
-            this.text(O, $V([0, 1]), "TEX:$O$");
-            this.text(P, $V([0, -1]), "TEX:$P$");
+            this.text(O, $V([0, 1]), "TEX:O");
+            this.text(P, $V([0, -1]), "TEX:P", false, Math.PI/2, 30, 500);
+          //this.text(P, $V([0, -1]), "TEX:\\text{example}", false, 0, 50, 100)
+
           });
           /* ]]> */
         </script>
@@ -234,8 +238,8 @@ import Image from "../../../components/Image.astro";
         var O = $V([0, 0]);
         var P = $V([2, 2]);
         this.arrow(O, P);
-        this.text(O, $V([0, 1]), "TEX:$O$");
-        this.text(P, $V([0, -1]), "TEX:$P$");
+        this.text(O, $V([0, 1]), "TEX:O");
+        this.text(P, $V([0, -1]), "TEX:P", false, Math.PI/2, 30, 500);
     });
     ` />
 
