--- a/src/pages/sta/trusses.astro
+++ b/src/pages/sta/trusses.astro
@@ -93,7 +93,7 @@ Zero force members are members in a truss structure that experience no force. Th
 </Item>
 </Enumerate>
 
-<Image src='/sta/trusses/0ForceMembers.jpg' width='5'> Examples of different zero force members, highlighted in red.</Image>
+<Image src='/sta/trusses/0ForceMembers.jpg' width='5'> Examples of different zero force members, highlighted in red. Note that when you remove those members there are more zero force members in each system that can also be eliminated! </Image>
 
 <p>
    These rules will help us simplify trusses and solve for the internal forces in the desired members.
