Update logo for Mechanism Design

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -179,7 +179,7 @@ div.grid{
             <div class="grid card-grid-fancy">
                 <div class="main-cards">
                     <a href="/md">
-                        <div style="background-color: #fff;"></div>
+                        <img src="/home_page/Mechanisim%20Design.png" alt="Mechanisim Design Logo" />
                         <p>Mechanism Design</p>
                     </a>
                 </div>
