--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -480,7 +480,7 @@ const path = Astro.url.pathname;
                                 <li><a href="/md/Graphical_Linkage_Synthesis?origin=sidebar">Graphical Linkage Synthesis</a></li>
                                 <li><a href="/md/Instant_Centers?origin=sidebar">Instant Centers</a></li>
                                 <li><a href="/md/Cams?origin=sidebar">Cams</a></li>
-                                <li><a href="/md/Position_Velocity_Acceleration?origin=sidebar">Position_Velocity_Acceleration</a></li>
+                                <li><a href="/md/Position_Velocity_Acceleration?origin=sidebar">Position Velocity Acceleration</a></li>
                             </ol>
                         </section>
                     </div>
