--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -121,7 +121,7 @@ div.grid{
             <div class="grid card-grid-fancy">
                 <div class="main-cards">
                     <a href="/sta">
-                        <div style="background-color: #fff;"></div>
+                        <img src="/home_page/StaticsCoverPic.png" alt="Thermodynamics logo" />
                         <p>Statics</p>
                     </a>
                 </div>
