--- a/src/pages/sol/torsion.astro
+++ b/src/pages/sol/torsion.astro
@@ -152,7 +152,7 @@ The shear stress in the elastic range varies linearly with the radial position i
     </CalloutCard>
 </CalloutContainer>
 
-<DisplayEquation equation="J = \\int_0^R{\\rho^2dA} = \\int_0^R{\\rho^2(2\\pi\\rho d\\rho)dA} =2\\pi \\int_0^R{\\rho^3d\\rho} = \\frac{\\pi R^4}{2} = \\frac{\\pi D^4}{32}\\" title="Solid shaft (radius and diameter)." background="True"/>
+<DisplayEquation equation="J = \\int_0^R{\\rho^2dA} = \\int_0^R{\\rho^2(2\\pi\\rho d\\rho)} =2\\pi \\int_0^R{\\rho^3d\\rho} = \\frac{\\pi R^4}{2} = \\frac{\\pi D^4}{32}\\" title="Solid shaft (radius and diameter)." background="True"/>
 
 <DisplayEquation equation="J = \\frac{\\pi}{2}(R_o^4-R_i^4) = \\frac{\\pi}{32}(D_o^4-D_i^4)\\" title="Hollow shaft (inner and outer radius)." background="True"/>
 </SubSubSection>
